# downquark.applicationFoss.GuiTui

./: .gitignore  .gitmodules  README.md  guitui.d.ts  pyproject.toml
_notes/: guitui.demo.ts  tui-sample.toml
_notes/sample-scripts/: tui-footer.sh  tui-global.ts  tui-leftnav.sh  tui-main.ts  tui-topmenu.sh
guitui/: __init__.py  __main__.py
guitui/input/: __init__.py
guitui/input/cmds/: __init__.py  parse.py
guitui/input/toml/: __init__.py  layout.toml
guitui/input/toml/mock/: __init__.py  initialize.toml  mock-my-db.toml
guitui/utils/: __init__.py
guitui/utils/patterns/: __init__.py
shell/: _deps.ts  guitui.demo.ts  guitui.ts
shell/_utils/: _constants.ts  characters.ts  fs.ts  grid.ts  parser.ts  ui.ts
shell/interactions/: keyboard.ts  prompts.ts  scripts.ts
shell/tui/: blueprint.actions.ts  blueprint.content.ts  blueprint.initialize.ts  blueprint.ts
